[gd_scene load_steps=20 format=3 uid="uid://vcwf6xqyqml0"]

[ext_resource type="Script" uid="uid://chltblvabroym" path="res://calculator.gd" id="1_jvx5q"]
[ext_resource type="Script" uid="uid://c14vkj54gjxwe" path="res://input_display.gd" id="2_s135h"]
[ext_resource type="Script" uid="uid://dmimckscnoeax" path="res://assistant.gd" id="3_oeqi2"]
[ext_resource type="Script" uid="uid://c47drfmwci866" path="res://button_blocker.gd" id="3_s135h"]
[ext_resource type="Texture2D" uid="uid://dkbgqubb85ut5" path="res://assistant.png" id="4_avgk0"]
[ext_resource type="Texture2D" uid="uid://ccpxfoonu7pn5" path="res://cadeado.png" id="4_oeqi2"]
[ext_resource type="Texture2D" uid="uid://bqs0vsukelqsw" path="res://assistantdormindo1.png" id="5_fldfr"]
[ext_resource type="Texture2D" uid="uid://cbfysuod7un4j" path="res://assistantdormindo2.png" id="6_4cigk"]
[ext_resource type="Texture2D" uid="uid://bm4janq5sg3ll" path="res://assistantdormindo3.png" id="7_j2dfv"]
[ext_resource type="Texture2D" uid="uid://bv4l4kq746enj" path="res://assistantdormindo4.png" id="8_htjbx"]
[ext_resource type="Texture2D" uid="uid://3j2dewjmd23d" path="res://assistantdormindo5.png" id="9_pe8o3"]
[ext_resource type="Texture2D" uid="uid://bjhdlxuh3oxi6" path="res://assistantduvidoso.png" id="10_ypg8g"]
[ext_resource type="Texture2D" uid="uid://bknemgimkwk26" path="res://assistantputo.png" id="11_mi7fu"]
[ext_resource type="Texture2D" uid="uid://bih6ndsf1sgbv" path="res://assistantrindo1.png" id="12_2y4nb"]
[ext_resource type="Texture2D" uid="uid://cylvds88xia4e" path="res://assistantrindo2.png" id="13_tyfku"]
[ext_resource type="Texture2D" uid="uid://brovj1bkshkny" path="res://assistantrindo3.png" id="14_u0o8a"]

[sub_resource type="LabelSettings" id="LabelSettings_b7xt3"]
font_size = 12

[sub_resource type="SpriteFrames" id="SpriteFrames_8kerd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_avgk0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_fldfr")
}, {
"duration": 1.0,
"texture": ExtResource("6_4cigk")
}, {
"duration": 1.0,
"texture": ExtResource("7_j2dfv")
}, {
"duration": 1.0,
"texture": ExtResource("8_htjbx")
}, {
"duration": 1.0,
"texture": ExtResource("9_pe8o3")
}],
"loop": true,
"name": &"dormindo",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ypg8g")
}],
"loop": true,
"name": &"duvidoso",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_mi7fu")
}],
"loop": true,
"name": &"puto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_2y4nb")
}, {
"duration": 1.0,
"texture": ExtResource("13_tyfku")
}, {
"duration": 1.0,
"texture": ExtResource("14_u0o8a")
}, {
"duration": 1.0,
"texture": ExtResource("13_tyfku")
}],
"loop": true,
"name": &"rindo",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixuri"]
size = Vector2(64, 64)

[node name="Node" type="Node"]

[node name="Calculadora" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jvx5q")

[node name="PanelContainer" type="PanelContainer" parent="Calculadora"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 310.0
offset_bottom = 510.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Calculadora/PanelContainer"]
layout_mode = 2

[node name="InputDisplay" type="LineEdit" parent="Calculadora/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 2
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
select_all_on_focus = true
script = ExtResource("2_s135h")

[node name="GridContainer" type="GridContainer" parent="Calculadora/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="7Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "7"

[node name="8Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="9Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
text = "9"

[node name="+Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
text = "+"

[node name="4Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="5Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
text = "5"

[node name="6Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
text = "6"

[node name="-Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
text = "-"

[node name="1Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "1"

[node name="2Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
text = "2"

[node name="3Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "3"

[node name="*Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "*"

[node name="CButton" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "C"

[node name="0Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "0"

[node name="_Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "/"

[node name="=Button" type="Button" parent="Calculadora/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "="

[node name="ButtonBlocker" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_s135h")
assistant_path = NodePath("../assistant")
input_display_path = NodePath("../Calculadora/PanelContainer/VBoxContainer/InputDisplay")
calculator_path = NodePath("../Calculadora")

[node name="7" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = -1.0
offset_top = 104.0
offset_right = 39.0
offset_bottom = 144.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/7"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="8" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 79.0
offset_top = 102.0
offset_right = 119.0
offset_bottom = 142.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/8"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="9" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 157.0
offset_top = 103.0
offset_right = 197.0
offset_bottom = 143.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/9"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="4" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 1.52588e-05
offset_top = 211.0
offset_right = 40.0
offset_bottom = 251.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/4"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="5" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 78.0
offset_top = 210.0
offset_right = 118.0
offset_bottom = 250.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/5"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="6" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 157.0
offset_top = 211.0
offset_right = 197.0
offset_bottom = 251.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/6"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="-" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 234.0
offset_top = 211.0
offset_right = 274.0
offset_bottom = 251.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/-"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="2" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 78.0
offset_top = 319.0
offset_right = 118.0
offset_bottom = 359.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/2"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="3" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 158.0
offset_top = 319.0
offset_right = 198.0
offset_bottom = 359.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/3"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="asterisco" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 235.0
offset_top = 320.0
offset_right = 275.0
offset_bottom = 360.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/asterisco"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="barra" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 157.0
offset_top = 426.0
offset_right = 197.0
offset_bottom = 466.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/barra"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="0" type="Panel" parent="ButtonBlocker"]
layout_mode = 0
offset_left = 78.0
offset_top = 426.0
offset_right = 118.0
offset_bottom = 466.0
scale = Vector2(1.92, 2.64)

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlocker/0"]
position = Vector2(17.1875, 18.5606)
scale = Vector2(0.944906, 0.699811)
texture = ExtResource("4_oeqi2")

[node name="DialogLabel" type="Label" parent="."]
offset_left = 233.0
offset_top = 81.0
offset_right = 273.0
offset_bottom = 104.0
label_settings = SubResource("LabelSettings_b7xt3")

[node name="SimButton" type="Button" parent="."]
visible = false
offset_left = 324.0
offset_top = 254.0
offset_right = 361.0
offset_bottom = 285.0
text = "Sim"

[node name="assistant" type="Area2D" parent="."]
z_index = 10
position = Vector2(325, 161)
script = ExtResource("3_oeqi2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="assistant"]
position = Vector2(-10, 22)
scale = Vector2(1.1839, 1.2239)
sprite_frames = SubResource("SpriteFrames_8kerd")
animation = &"rindo"
frame = 2
frame_progress = 0.944444

[node name="CollisionShape2D" type="CollisionShape2D" parent="assistant"]
position = Vector2(-12, 8)
shape = SubResource("RectangleShape2D_ixuri")

[connection signal="pressed" from="SimButton" to="assistant" method="_on_sim_button_pressed"]
[connection signal="input_event" from="assistant" to="assistant" method="_on_input_event"]
